[project]
name = "accord_state_core"
authors = [
    { name = "Wikki", email = "wikki@example.com" }
]
description = "Minimal backend-only Accord state app for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

