[project]
name = "accord_erp_custom_field"
authors = [
    { name = "Wikki", email = "wikki@example.com" }
]
description = "ERPNext custom field app for the Accord mobile workflow"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
